Adding basic setup for creating, deleting and retrieving users. Not working e2e yet still debugging.
