# api/openapi.yml
@@ -122,54 +122,7 @@ paths:
                   $ref: '#/components/schemas/User'
         '500':
           description: 'Internal server error.'
-    post:
-      x-amazon-apigateway-integration:
-        uri:  arn:aws:apigateway:eu-west-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-west-1:478910673833:function:31-user-and-session--PromptDefender-User/invocations
-        passthroughBehavior: "when_no_match"
-        httpMethod: "POST"
-        type: "aws_proxy"
-      summary: 'Add Suspicious User'
-      description: 'This endpoint adds a user to the list of suspicious users.'
-      operationId: 'addUser'
-      security:
-        - ApiKeyAuth: [ ]
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-      responses:
-        '201':
-          description: 'User successfully added.'
-        '400':
-          description: 'Bad request. The user data is missing or invalid.'
-        '500':
-          description: 'Internal server error.'
-    delete:
-      x-amazon-apigateway-integration:
-        uri:  arn:aws:apigateway:eu-west-1:lambda:path/2015-03-31/functions/arn:aws:lambda:eu-west-1:478910673833:function:31-user-and-session--PromptDefender-User/invocations
-        passthroughBehavior: "when_no_match"
-        httpMethod: "DELETE"
-        type: "aws_proxy"
-      summary: 'Remove Suspicious User'
-      description: 'This endpoint removes a user from the list of suspicious users.'
-      operationId: 'removeUser'
-      security:
-        - ApiKeyAuth: [ ]
-      parameters:
-        - name: 'userId'
-          in: 'query'
-          required: true
-          schema:
-            type: 'string'
-      responses:
-        '200':
-          description: 'User successfully removed.'
-        '400':
-          description: 'Bad request. The userId is missing or invalid.'
-        '500':
-          description: 'Internal server error.'
+
 
 components:
   securitySchemes:
